client/src/css/fitness.module.css
.fitnessContainer {
  height: 100%;
  width: 90vw;
  border-radius: 10px;
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  margin-top: 40px;
  margin-bottom: 100px;
  background-color: #2b2b2b;
  color: white;
}

.fitnessContainer > h2 {
  margin-top: 20px;
}

.day {
  border-radius: 10px;
}

.anExercise {
  border-radius: 10px;
  background-color: hsl(0, 0%, 30%);
  padding: 5px;
  min-height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.anExercise > * {
  margin: 10px;
}

.streakContainer {
  display: flex;
  justify-content: row;
}

.doneContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 130px;
  margin-right: 20px;
  margin-top: 30px;
}

.doneTodaySymbol {
  width: 40px;
  height: 40px;
  margin-bottom: 25px;
}

.doneLabel {
  pointer-events: none;
}

.graphs {
  display: flex;
  height: 140px;
}

.graph {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 150px;
}

.fitnessSVG {
  height: 100px;
  width: 100px;
}

#addWorkout {
  margin: 10px;
}

.workoutForm {
  border-radius: 10px;
  background-color: hsl(0, 0%, 30%);
  margin: 10px;
}

.formButtons {
  background-color: hsl(184, 61%, 40%);
  border: none;
  margin: 3px;
}

.formButtons:hover {
  color: white;
  background-color: hsl(184, 61%, 77%);
}

input[type="radio"]:checked + .formButtons {
  border-color: rgb(92, 208, 216);
  background-color: rgb(92, 208, 216);
}

input[type="checkbox"]:checked + .formButtons {
  border-color: rgb(92, 208, 216);
  background-color: rgb(92, 208, 216);
}

input[type="checkbox"]:active + .formButtons,
input[type="checkbox"]:focus + .formButtons {
  border-color: rgb(92, 208, 216);
  background-color: rgb(92, 208, 216);
}

.exerciseButtonsContainer {
  justify-content: center;
}

.completeAllButton {
  margin: 20px 0;
}

.completeAllButton:disabled {
  background-color: grey;
  border: grey;
}

.modalButton {
  background-color: hsl(184, 61%, 40%);
  color: white;
  border: none;
  margin: 5px;
}

.modalButton:hover,
.modalButton:active,
.modalButton:focus {
  background-color: hsl(184, 61%, 60%);
  color: black;
}

.paginationButton {
  background-color: hsl(184, 61%, 40%);
  color: white;
  border: none;
  margin: 5px;
}

.paginationButton:hover {
  background-color: hsl(184, 61%, 60%);
  color: black;
}

.paginationButton:active,
.paginationButton:focus {
  background-color: hsl(184, 61%, 60%);
  color: black;
}

.paginationButton:disabled {
  background-color: grey;
  color: white;
  border: none;
  margin: 5px;
}

.modal {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 400px;
  width: 400px;
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  top: 20%;
  background-color: hsl(0, 0%, 30%);
  border-radius: 10px;
  color: white;
  font-size: 20pt;
}

.modal > strong {
  margin: 10px 0 15px 0;
}

.modalImage {
  height: 300px;
  width: 300px;
  border-radius: 10px;
}

.hidden {
  display: none;
}

/*  MEDIA QUERIES  */

/* phones */
@media (width <= 767px) {
  .fitnessContainer {
    margin-bottom: 130px;
  }

  .exercisesContainer {
    width: 300px;
  }

  .doneContainer {
    justify-content: flex-start;
    align-items: center;
    margin: 20px 10px 10px 10px;
    font-size: 10pt;
    max-width: 120px;
  }

  .doneTodaySymbol {
    margin-top: 10px;
    margin-bottom: 24px;
  }

  .graphs p {
    font-size: 10pt;
    max-width: 110px;
  }
}

/* tablets & computers */
@media (width > 767px) {
  .fitnessContainer {
    margin-top: 160px;
  }

  /* multiple column grids */
  .exercisesContainer {
    width: 85vw;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    grid-gap: 10px;
  }

  .graph {
    margin: 0 20px 0 20px;
  }
  .graphs {
    justify-content: space-around;
  }
}

